# any2music

./: .gitignore  README.md  pyproject.toml  requirements.txt
any2music/: __init__.py
any2music/audio/: __init__.py
any2music/audio/decoders/: __init__.py  musicgen.py
any2music/audio/quantization/: __init__.py  core_vq.py  vq.py
any2music/audio/tokenizers/: __init__.py  dac.py  encodec.py
any2music/audio/utils/: __init__.py  channel_and_sample.py
any2music/base/: __init__.py  audio_tokenizer.py  conditioner.py  decoder.py
any2music/text/encoders/: __init__.py  t5.py
docs/audio/tokenizers/: encodec.md
samples/description/: 1942.txt  zelda.txt
tests/audio/decoders/: test_musicgen.py
tests/audio/tokenizers/: test_dac.py  test_encodec.py
tests/text/encoders/: test_t5.py
